--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ $RECYCLE.BIN/
 
 
 #######################################
+# wasm
+#######################################
+*.wasm
+
+#######################################
 # rust/cargo
 #######################################
 /target/
