Build for gh-pages

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ $RECYCLE.BIN/
 #######################################
 # wasm
 #######################################
-*.wasm
+# disabled so we can deploy to github pages
+# *.wasm
 
 #######################################
 # rust/cargo
