--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ $RECYCLE.BIN/
 #######################################
 # wasm
 #######################################
+wasm_astar
 *.wasm
 
 #######################################
